v1.2.3 - Pending
	+ Incorporate disc tag in album sorting (Emmanuel Viaud)
	+ Significantly reduced wakeups/sec according to powertop
	+ Add stream name as a formatting option
	+ Added Italian translation (Gianni Vialetto)
	+ Added Swedish translation (Daniel Nylander)
	+ Added Dutch translation (Olivier)
	+ Bug: Czech translation incorrectly labeled Swedish
	+ Bug: Song played after a replace is first in list, even in shuffle mode
	+ Bug: Collapsed view doesn't work properly in some WMs (e.g. Fluxbox)
	+ Bug: Allow update library menu item even when library is empty

v1.2.2 - July 22, 2007
	+ Bug: Fix artwork fetching (Amazon gzip'ed xml returns garbage)
	+ Bug: Prevent connection error if the interface hasn't yet been run
	+ Bug: Prevent possibility of deleting image file when choosing local art file
	+ Bug: Don't load gnome-settings-daemon if it's not running (kinote)

v1.2.1 - July 16, 2007
	+ Bug: Using MPD with a password causes error

v1.2 - July 15, 2007
	+ Audioscrobbler support (requires python 2.5 or python-elementtree) (Owen)
	+ Support for multiple profiles (and, e.g., "sonata --profile=2")
	+ Ability to set search terms for lyrics
	+ Ability to rename playlists (requires mpd >= 0.13)
	+ Prevent continually searching for artwork/lyrics if not found the first time
	+ Search for additional artwork filenames
	+ Allows resetting artwork to the default image
	+ 'Save All' button for tag editing window
	+ Display MPD status in systray icon
	+ Prevent GUI blocking when connecting to MPD, where possible
	+ Added Finnish translation (Ilkka Tuohela)
	+ Bug: Multimedia keys no longer work in Gnome 2.18 (Florian)
	+ Bug: Hide statusbar in collapse mode when showing from systray
	+ Bug: Cover artwork filename doesn't use system's locale charset
	+ Bug: MPD_HOST variable doesn't work when it includes password

v1.1.1 - May 18, 2007
	+ Add Czech translation (Jakub Adler)
	+ Bug: Incorrect artist can sometimes be set for album art/info (vEX)